--- a/js/index.html
+++ b/js/index.html
@@ -8,12 +8,11 @@
 
 <body>
     <h1>Programacion Orientada a objetos en JavaScript</h1>
+
     <script src="Account.js"></script>
     <script src="Car.js"></script>
-    <script src="Route.js"></script>
-    <script src="Payment.js"></script>
+    <script src="UberX.js"></script>
     <script src="index.js"></script>
-
 </body>
 
 </html>
