--- a/js/index.html
+++ b/js/index.html
@@ -12,6 +12,9 @@
     <script src="Account.js"></script>
     <script src="Car.js"></script>
     <script src="UberX.js"></script>
+    <script src="UberBlack.js"></script>
+    <script src="UberPool.js"></script>
+    <script src="UberVan.js"></script>
     <script src="index.js"></script>
 </body>
 
